# hubo-manipulation

./: .gitignore  CMakeLists.txt  README.md  ctrl-manipulation-basic.cpp  setup_MANCV_pipeline.pl
include/: Grasper.h  manipulation_instruction_t.h
src/: Grasper.cpp  SimpleHubo.cpp
